# LBOD

./: CMakeLists.txt  Makefile  README.md
src/: compile.c  lex.c  main.c  parse.c
src/inc/: main.h
vimfiles/: lbodftd.vim  lbodsyn.vim
